<resources>
    <string name="lang">eng</string>
    <string name="emerge_report">Show error report</string>
    <string name="emerge_mode">Emergency mode</string>
    <string name="step_fees"><![CDATA[<font color=#999999>Choose miner fee</font><br><br>%1$s]]></string>
    <string name="sets_rescan_ok">Wallet will be closed now and blockchain rescan is going to be started automatically on next launch</string>
    <string name="greetings">Bitcoin Lightning Wallet\nPlease read a short yet important\n<a href='http://lightning-wallet.com'>wallet manual</a> before proceeding</string>
    <string name="boost_details"><![CDATA[Would you like to raise a fee for this transaction and thus get it confirmed faster?<br><br>current %1$s<br>raised %2$s<br>]]></string>
    <string name="mnemonic_info"><font color="#E31300">Mnemonic phrase is important</font>\n<a href="http://lightning-wallet.com/installing-lightning-wallet#mnemonic-code">Read about it</a> and save it now\n\n\n<small>swipe screen to the left\nto open a QR scanner</small></string>
    <string name="fee_risky"><![CDATA[<small>%1$s %2$s<br><small><font color=#999999>Confirmation may take hours</font></small></small>]]></string>
    <string name="fee_live"><![CDATA[<small>%1$s %2$s<br><small><font color=#999999>Faster confirmation times</font></small></small>]]></string>
    <string name="copied_to_clipboard">Copied «%1$s»</string>
    <string name="wallet_settings">Wallet settings</string>
    <string name="wallet_restore">Restore Wallet</string>
    <string name="wallet_create">New Wallet</string>
    <string name="restore_when">When was your wallet created?\nLeave date as is if not sure</string>
    <string name="create_wallet_creating">Generating your wallet\nIt may take up to a few minutes</string>
    <string name="restore_wallet_restoring">Restoring your wallet\nIt may take a while</string>
    <string name="restore_mnemonic_wrong">Phrase must be 12 words long</string>
    <string name="restore_hint">Your BIP32 mnemonic phrase</string>
    <string name="channel_recovery_info">
        Recovery tool downloads available channel backups from Olympus servers and uses them to reimburse locked funds back into your on-chain wallet.\n\n
        You should expect a refunding Bitcoin transaction shortly after starting it if you do have lost channels with some locked funds, otherwise nothing
        will happen.\n\nUsing this tool does not affect open channels currently present on this phone
    </string>
    <string name="tokens_warn"><![CDATA[
        Please note: this wallet uses paid <a href=http://lightning-wallet.com/storage-tokens#storage-tokens>storage tokens</a> to store your encrypted channel backups and
        <a href=https://medium.com/@akumaigorodski/watchtower-support-is-coming-to-bitcoin-lightning-wallet-8f969ac206b2>secure off-chain balance</a> while your device is offline.
        <br><br>An automatic Lightning payment of <i>%1$s</i> will acquire 50 storage tokens once your first channel becomes open
    ]]></string>
    <string name="migrator_usage_warning"><![CDATA[
        Migration tool creates a snapshot file which can be used to fully
        restore your wallet at a later time, possibly on another device.<br><br>
        <strong>Two use cases for this tool</strong><br>
        1. Moving wallet data from one phone to another.<br>
        2. Deleting wallet and restoring it a bit later.<br><br>
        This tool <strong>SHOULD NOT</strong> be used to store a long-term backup of
        your wallet or create multiple copies of the same wallet on many devices!<br><br>
        Snapshot file is <strong>NOT</strong> encrypted so never put it to public places!
    ]]></string>
    <string name="hivemind_details"><![CDATA[
        <strong>Hivemind deposits are disabled</strong><br><br>
        It will be possible to deposit funds to Hivemind if <a href="http://www.drivechain.info/">Drivechain</a> soft-fork gets activated.<br><br>
        <a href="http://bitcoinhivemind.com/">Hivemind</a> is a Peer-to-Peer Oracle Protocol which absorbs accurate data into a blockchain so that Bitcoin-users can speculate in Prediction Markets.<br><br>
        These markets have the <a href=http://bitcoinhivemind.com/papers/3_PM_Applications.pdf>potential</a> to revolutionize the emergence and diffusion of knowledge in society.
    ]]></string>
    <string name="offchain_receive_howto"><![CDATA[
        Receiving off-chain Lightning funds requires you to have at least one <a href=https://lightning-wallet.com/using-lightning-wallet#payment-channel>payment channel</a>. There are two ways to accomplish this:<br><br>
        1. Open an <i>outgoing channel</i> with a peer of your choice and spend some Lightning funds first to <a href=https://lightning-wallet.com/using-lightning-wallet#receiving-lightning-funds>make room</a> for incoming payments.<br><br>
        2. <a href=https://www.bitrefill.com/thor-lightning-network-channels>Order</a> an <i>incoming channel</i> where all the funds are initially on peer\'s side so you can receive Lightning payments right away.
    ]]></string>
    <string name="olympus_log">Token usage log</string>
    <string name="olympus_add">Add Olympus server</string>
    <string name="olympus_edit">Edit Olympus server</string>
    <string name="olympus_actions">Add, remove or reorder</string>
    <string name="olympus_backup">Watchtower and backups</string>
    <string name="olympus_hint">Server host:port</string>
    <string name="gdrive_last_saved">Last save %1$s</string>
    <string name="gdrive_failed">Backup saving has failed</string>
    <string name="gdrive_disabled">GDrive backups are disabled</string>
    <string name="gdrive_not_present">No backup is present yet</string>
    <string name="sets_gdrive">Backup channels to GDrive</string>
    <string name="sets_set_fiat">Set Fiat currency</string>
    <string name="sets_choose_unit">Choose Bitcoin unit</string>
    <string name="sets_manage_olympus">Manage Olympus servers</string>
    <string name="sets_chan_recover">Use Olympus recovery tool</string>
    <string name="sets_migrator">Use wallet migration tool</string>
    <string name="sets_mnemonic">View mnemonic phrase</string>
    <string name="sets_rescan">Rescan blockchain</string>
    <string name="action_coins_send">Send funds</string>
    <string name="action_coins_receive">Receive funds</string>
    <string name="action_ln_details">View channel details</string>
    <string name="action_ln_open">Open new channel</string>
    <string name="amount_hint_sat"><![CDATA[Amount in Satoshi%1$s]]></string>
    <string name="amount_hint_btc"><![CDATA[Amount in Bitcoin%1$s]]></string>
    <string name="amount_hint_can_deliver"><![CDATA[<br><small><font color=#0099FE>can <strong>deliver</strong> %1$s</font></small>]]></string>
    <string name="amount_hint_newchan"><![CDATA[<br><small>min capacity %1$s<br>max capacity %2$s<br>balance %3$s</small>]]></string>
    <string name="amount_hint_can_receive"><![CDATA[<br><small>can receive %1$s</small>]]></string>
    <string name="amount_hint_can_send"><![CDATA[<br><small>can send %1$s</small>]]></string>
    <string name="dialog_pr_making">Making payment request&#8230;</string>
    <string name="olympus_recovering">Getting Olympus backups&#8230;</string>
    <string name="dialog_pr_expired">Expired payment request</string>
    <string name="dialog_sum_small">Amount is too small</string>
    <string name="dialog_sum_big">Amount is too large</string>
    <string name="dialog_pay_onchain">Pay on-chain</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_boost">CPFP</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_pay">Pay</string>
    <string name="dialog_max">Max</string>
    <string name="dialog_ok">OK</string>
    <string name="btc_empty">No on-chain funds</string>
    <string name="ln_empty">No off-chain funds</string>
    <string name="btc_status_operational">Wallet is operational</string>
    <string name="btc_status_connecting"><![CDATA[<font color=#E68A00>Connecting to peers&#8230;</font>]]></string>
    <string name="ln_incoming_title"><![CDATA[<font color=#0099FE><strong>Lightning payment</strong></font><br>%1$s<br><br>received %2$s<br><small>%3$s at current rates</small>]]></string>
    <string name="ln_outgoing_title_no_fee"><![CDATA[<font color=#0099FE><strong>Lightning payment</strong></font><br>%1$s<br><br>sent %2$s<br><small>%3$s at current rates</small>]]></string>
    <string name="ln_outgoing_title"><![CDATA[<font color=#0099FE><strong>Lightning payment</strong></font><br>%1$s<br><br>sent %2$s<br><small>%3$s at current rates</small><br>fee %4$s = %5$.2f%%]]></string>
    <string name="btc_incoming_title"><![CDATA[<font color=#E68A00><strong>Bitcoin transaction</strong></font><br>%1$s<br><br>received %2$s<br><small>%3$s at current rates</small>]]></string>
    <string name="btc_outgoing_title_no_fee"><![CDATA[<font color=#E68A00><strong>Bitcoin transaction</strong></font><br>%1$s<br><br>sent %2$s<br><small>%3$s at current rates</small>]]></string>
    <string name="btc_outgoing_title"><![CDATA[<font color=#FF9900><strong>Bitcoin transaction</strong></font><br>%1$s<br><br>sent %2$s<br><small>%3$s at current rates</small><br>fee %4$s = %5$.2f%%]]></string>
    <string name="btc_pending_title"><![CDATA[<font color=#FF9900><strong>Bitcoin transaction</strong></font><br><small>delayed channel refunding</small><br>%1$s<br><br>pending %2$s<br><small>%3$s at current rates</small><br>fee %4$s = %5$.2f%%]]></string>
    <string name="btc_refunding">Refunding transaction</string>
    <string name="txs_view_outside">View on SmartBit site</string>
    <string name="txs_share_body">Share raw transaction</string>
    <string name="txs_p2wsh">Contract funding</string>
    <string name="send_scan_qr">Scan a QR code</string>
    <string name="send_paste_payment_request"><![CDATA[Paste a Bitcoin address<br><font color=#999999><small>or Lightning Payment Request</small></font>]]></string>
    <string name="send_hivemind_deposit"><![CDATA[Deposit funds to Hivemind<br><font color=#999999><small>a prediction market sidechain</small></font>]]></string>
    <string name="ln_send_title_guaranteed"><![CDATA[<font color=#FFFFFF><strong>Guaranteed Delivery</strong><small><br><br>%1$s</small></font>]]></string>
    <string name="ln_send_title"><![CDATA[<font color=#0099FE><strong>Send Lightning Payment</strong></font><small><br><br>%1$s</small>]]></string>
    <string name="btc_send_title"><![CDATA[<font color=#E68A00><strong>Send Bitcoin Transaction</strong></font>]]></string>
    <string name="ln_receive_title"><![CDATA[<font color=#0099FE><strong>Receive Lightning payment</strong></font>]]></string>
    <string name="ln_receive_option"><![CDATA[<font color=#0099FE>Lightning payment</font><small><br><br>%1$s</small>]]></string>
    <string name="btc_receive_option"><![CDATA[<font color=#FF9900>Bitcoin transaction</font><small><br><br>Make a QR-code with on-chain wallet address, can be used to receive regular Bitcoin transactions.</small>]]></string>
    <string name="ln_info_sent">value sent</string>
    <string name="ln_info_received">value received</string>
    <string name="ln_info_in_flight">value in-flight</string>
    <string name="ln_info_can_receive">can receive</string>
    <string name="ln_info_refundable">refundable</string>
    <string name="ln_info_depth">funding depth</string>
    <string name="ln_info_fee">force-close fee</string>
    <string name="ln_info_capacity">capacity</string>
    <string name="ln_info_can_send">can send</string>
    <string name="ln_info_started">started</string>
    <string name="ln_info_closed">closed</string>
</resources>