<LinearLayout
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/frag_input_choose_fee"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/rescanWallet"
        android:text="@string/sets_rescan"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/viewMnemonic"
        android:text="@string/sets_mnemonic"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/manageOlympus"
        android:text="@string/sets_manage_olympus"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/recoverChannelFunds"
        android:text="@string/sets_chan_recover"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/exportWalletSnapshot"
        android:text="@string/sets_migrator"/>

    <View style="@style/GrayDivider"/>
</LinearLayout>