<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/StandardLinearLayoutPage">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
        app:titleTextAppearance="@style/ToolbarTitleAppearance"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:id="@+id/toolbar"

        app:contentInsetLeft="@dimen/app_padding"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetStart="@dimen/app_padding"
        app:contentInsetEnd="@dimen/app_padding"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:gravity="top"
            style="@style/StandardLinearLayout">

            <CheckBox
                style="@style/Info"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:id="@+id/gDriveBackups"
                android:layout_width="wrap_content"
                android:text="@string/sets_gdrive"
                android:onClick="onGDrive"/>

            <TextView
                style="@style/Info"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:id="@+id/gDriveBackupState"
                android:layout_width="wrap_content"/>

            <View style="@style/GrayDivider"/>

            <CheckBox
                style="@style/Info"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/sets_bluetooth"
                android:layout_width="wrap_content"
                android:id="@+id/bluetoothConnect"
                android:layout_gravity="center"
                android:onClick="onBluetooth"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/setFiatCurrency"
                android:text="@string/sets_set_fiat"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/chooseBitcoinUnit"
                android:text="@string/sets_choose_unit"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/rescanWallet"
                android:text="@string/sets_rescan"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/viewMnemonic"
                android:text="@string/sets_mnemonic"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/manageOlympus"
                android:text="@string/sets_manage_olympus"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/recoverChannelFunds"
                android:text="@string/sets_chan_recover"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/exportWalletSnapshot"
                android:text="@string/sets_migrator"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>