<android.support.v7.widget.CardView
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="2dp"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_padding">

        <LinearLayout style="@style/CardLinearLayoutWhite">

            <TextView
                style="@style/BaseText"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:id="@+id/addressAndKey"/>

            <TextView
                style="@style/BaseText"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:id="@+id/stateAndConnectivity"
                android:gravity="end"/>

        </LinearLayout>

        <github.nisrulz.stackedhorizontalprogressbar.StackedHorizontalProgressBar
            android:progressDrawable="@drawable/stacked_horizontal_progress"
            android:layout_marginBottom="@dimen/app_padding"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginTop="@dimen/app_padding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/stackBar"/>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/totalCapacity">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_capacity"/>

            <TextView
                style="@style/CardBaseText"
                android:textColor="@color/shpbr_background"
                android:id="@+id/totalCapacityText"
                android:gravity="end"/>

        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/canSend">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_can_send"/>

            <TextView
                style="@style/CardBaseText"
                android:textColor="@color/shpbr_primary_progress"
                android:id="@+id/canSendText"
                android:gravity="end"/>

        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/canReceive">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_can_receive"/>

            <TextView
                style="@style/CardBaseText"
                android:textColor="@color/shpbr_secondary_progress"
                android:id="@+id/canReceiveText"
                android:gravity="end"/>

        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/refundableAmount">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_refundable"/>

            <TextView
                style="@style/CardBaseText"
                android:textColor="#76B041"
                android:id="@+id/refundableAmountText"
                android:gravity="end"/>

        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/refundFee">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_fee"/>

            <TextView
                style="@style/CardBaseText"
                android:textColor="#E31300"
                android:id="@+id/refundFeeText"
                android:gravity="end"/>

        </LinearLayout>

        <View
            style="@style/GrayDivider"
            android:layout_marginTop="@dimen/app_padding"
            android:layout_marginBottom="@dimen/app_padding"/>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/startedAt">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_started"/>
            <TextView style="@style/CardBaseText" android:gravity="end" android:id="@+id/startedAtText"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/closedAt">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_closed"/>
            <TextView style="@style/CardBaseText" android:gravity="end" android:id="@+id/closedAtText"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/paymentsSent">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_sent"/>
            <TextView style="@style/CardBaseText" android:gravity="end" android:id="@+id/paymentsSentText"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/paymentsReceived">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_received"/>
            <TextView style="@style/CardBaseText" android:gravity="end" android:id="@+id/paymentsReceivedText"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/paymentsInFlight">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_in_flight"/>
            <TextView style="@style/CardBaseText" android:gravity="end" android:id="@+id/paymentsInFlightText"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayoutWhite" android:id="@+id/fundingDepth">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_depth"/>
            <TextView style="@style/CardBaseText" android:gravity="end" android:id="@+id/fundingDepthText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extraInfo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                style="@style/GrayDivider"
                android:layout_marginTop="@dimen/app_padding"
                android:layout_marginBottom="@dimen/app_padding"/>

            <TextView
                style="@style/BaseText"
                android:textColor="@color/bg"
                android:layout_width="wrap_content"
                android:id="@+id/extraInfoText"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>