<LinearLayout
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bg"
        android:id="@+id/mainChoice"
        android:visibility="gone">

        <TextView
            style="@style/Info"
            android:id="@+id/mainGreetings"
            android:text="@string/greetings"
            android:layout_marginBottom="45dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="exitCreateWallet"
            android:layout_width="wrap_content"
            android:text="@string/wallet_create"/>

        <TextView
            style="@style/Info"
            android:text="&#8226;"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="goRestoreWallet"
            android:layout_width="wrap_content"
            android:text="@string/wallet_restore"/>

    </LinearLayout>
</LinearLayout>