<RelativeLayout
    style="@style/StandardLinearLayoutPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/mainWrap"
        android:baselineAligned="true"
        style="@style/StandardLinearLayout">

        <android.support.v7.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
            app:titleTextAppearance="@style/ToolbarTitleAppearance"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:id="@+id/toolbar"

            app:contentInsetLeft="@dimen/app_padding"
            app:contentInsetStart="@dimen/app_padding"
            app:contentInsetRight="@dimen/app_padding"
            app:contentInsetEnd="@dimen/app_padding"/>

        <LinearLayout
            android:id="@+id/lnDetails"
            style="@style/LineLinearLayout"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:background="#222222"
            android:paddingBottom="9sp"
            android:paddingTop="6sp">

            <TextView
                style="@style/ToolbarTitleAppearance"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/lnBalance"/>

            <TextView
                style="@style/ToolbarSubtitleAppearance"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/lnStatus"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fiatDetails"
            style="@style/LineLinearLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:background="#2AA3A3"
            android:gravity="center">

            <TextView
                android:maxLines="1"
                style="@style/BaseText"
                android:ellipsize="end"
                android:layout_weight="15"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:id="@+id/fiatBalance"/>

            <TextView
                android:maxLines="1"
                style="@style/BaseText"
                android:ellipsize="end"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:id="@+id/fiatRate"
                android:textColor="#afd0e6"
                android:gravity="end"/>

        </LinearLayout>

        <ListView
            android:layout_weight="1"
            android:id="@+id/itemsList"
            style="@style/GrayDividerListView"/>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="top|center"
            android:id="@+id/mnemonicWarn"
            android:visibility="invisible"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/MarginInfo"
                android:text="@string/sets_mnemonic"
                android:layout_width="wrap_content"
                android:onClick="viewMnemonic"/>

            <View style="@style/GrayDivider"/>

            <TextView
                style="@style/MarginInfo"
                android:id="@+id/mnemonicInfo"
                android:text="@string/mnemonic_info"
                android:layout_width="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        fab:menu_icon="@drawable/ic_btc_24dp"
        fab:menu_colorPressed="@color/btc"
        fab:menu_colorNormal="@color/btc"
        fab:menu_colorRipple="@color/btc"
        style="@style/FloatingMenu"
        android:id="@+id/fam">

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_add_white_18dp"
            fab:fab_label="@string/action_ln_open"
            fab:fab_colorPressed="@color/ln"
            fab:fab_colorNormal="@color/ln"
            fab:fab_colorRipple="@color/ln"
            android:onClick="goAddChannel"
            style="@style/FabButton"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_info_outline_white_18dp"
            fab:fab_label="@string/action_ln_details"
            fab:fab_colorPressed="@color/ln"
            fab:fab_colorNormal="@color/ln"
            fab:fab_colorRipple="@color/ln"
            style="@style/FabButton"
            android:onClick="goOps"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_arrow_downward_white_18dp"
            fab:fab_label="@string/action_coins_receive"
            android:onClick="goReceivePayment"
            fab:fab_colorPressed="@color/btc"
            fab:fab_colorNormal="@color/btc"
            fab:fab_colorRipple="@color/btc"
            style="@style/FabButton"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_arrow_upward_white_18dp"
            fab:fab_label="@string/action_coins_send"
            fab:fab_colorPressed="@color/btc"
            fab:fab_colorNormal="@color/btc"
            fab:fab_colorRipple="@color/btc"
            android:onClick="goSendPayment"
            style="@style/FabButton"
            fab:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>